tests/snapshots/choice_generator_tests__observation_value_choice_union.snap
---
source: tests/choice_generator_tests.rs
expression: output
---
/**
 * Choice type for value property
 * 
 * Actual result
 */
export type ObservationValueChoice =
  | { valueQuantity: Quantity }
  | { valueCodeableConcept: CodeableConcept }
  | { valueString: string }
  | { valueBoolean: boolean }
  | { valueInteger: number }
  | { valueRange: Range }
  | { valueRatio: Ratio }
  | { valueSampledData: SampledData }
  | { valueTime: string }
  | { valueDateTime: string }
  | { valuePeriod: Period };
