tests/snapshots/choice_generator_tests__patient_deceased_inline_choice.snap
---
source: tests/choice_generator_tests.rs
expression: output
---
{ deceasedBoolean: boolean } | { deceasedDateTime: string }
