tests/snapshots/choice_generator_tests__patient_deceased_value_extractor.snap
---
source: tests/choice_generator_tests.rs
expression: output
---
/**
 * Extract value from deceased choice
 */
export function getPatientDeceasedChoiceValue(choice: PatientDeceasedChoice): boolean | string {
  if (hasDeceasedBoolean(choice)) return choice.deceasedBoolean;
  if (hasDeceasedDateTime(choice)) return choice.deceasedDateTime;
  throw new Error('Invalid choice type');
}
